# elemeta

./: .buildinfo  .coverage.union-wl-189.dynamic2.rpi.edu.23733.535161  .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  CNAME  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  apidocs.html  elemeta.dataset.html  elemeta.html  elemeta.nlp.extractors.high_level.html  elemeta.nlp.extractors.html  elemeta.nlp.extractors.low_level.html  elemeta.nlp.html  elemeta.nlp.runners.html  elemeta.suites.html  extractors.html  faq.html  genindex.html  getting_started.html  index.html  metafeatures.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  roadmap.html  search.html  searchindex.js  supported_languages.html
.github/workflows/: build-docs.yaml  build.yaml  docs.yaml  lint.yaml  release.yaml  tests.yaml
_sources/: apidocs.rst  elemeta.nlp.extractors.high_level.rst  elemeta.nlp.extractors.low_level.rst  elemeta.nlp.extractors.rst  elemeta.nlp.rst.txt  elemeta.rst  elemeta.suites.rst  faq.rst.txt  getting_started.rst  index.rst  index.rst.txt  metafeatures.rst  metafeatures.rst.txt  modules.rst.txt  roadmap.rst  supported_languages.rst
_sources/how_to_guides/: create_low_level_extractor.rst  create_low_level_extractor.rst.txt  custom_extractor.rst  custom_extractor.rst.txt  extractor_suite.rst  index.rst  single_extractor.rst
_sources/use_cases/: eda.rst  index.rst  modeling.rst  monitoring.rst  monitoring.rst.txt
common/: abstract_metafeature_extractor.py  abstract_pair_metafeature_extractor.py
docs/: conf.py  elemeta.dataset.rst  elemeta.nlp.extractors.high_level.rst  elemeta.nlp.extractors.low_level.rst  elemeta.nlp.rst  elemeta.nlp.runners.rst  elemeta.rst  extractors.rst  faq.rst  getting_started.rst  index.rst  metafeatures.rst  supported_languages.rst
docs/how_to_guides/: create_low_level_extractor.rst  custom_extractor.rst  extractor_suite.rst  index.rst  single_extractor.rst
docs/notebooks/: EDA.ipynb  LLM_Summary.ipynb  LLM_Translation.ipynb  common_llm.ipynb  create_low_level_extractor.ipynb  custom_extractor.ipynb  implementing_your_own_extractor.ipynb  monitoring.ipynb  quick_start.ipynb  (+2 more)
elemeta/: __init__.py
how_to_guides/: create_low_level_extractor.html  custom_extractor.html  extractor_suite.html  index.html  single_extractor.html
scripts/: build.sh  docs.sh  formatters.sh  install.sh  linters.sh  publish.sh  test.sh
use_cases/: LLM.html  eda.html  index.html  modeling.html  monitoring.html
(+175 files in other folders)
