[tool.poetry]
name = "elemeta"
version = "1.2.1"
description = "Metafeature Extraction for Unstructured Data"
license = "MIT"
authors = ["Lior Durahly <lior.durahly@superwise.ai>", "Elad Shoham <elad.shoham@superwise.ai>"]
readme = "README.md"
homepage = "https://docs.elemeta.ai"
repository = "https://github.com/superwise-ai/elemeta"
documentation = "https://docs.elemeta.ai"
packages = [{ include = "elemeta" }]

[tool.poetry.dependencies]
python = ">=3.8,<4.0.0"
nltk = "^3.8"
langdetect = "^1.0"
vadersentiment = "^3.3"
emoji = "^2.2"
numpy = "^1.22"
pandas = "^1.1"
textstat = "^0.7"
profanity-check = "^1.0"
better-profanity = "^0.7"
textblob = "^0.17"
datefinder = "^0.7"
pydantic = "^2.3.0"
sentence-transformers = "^2.2.2"
torch = "^2.0.1"
transformers = "^4.33.1"
presidio-analyzer = "^2.2.33"

[tool.poetry.group.test.dependencies]
setuptools = "^67.6"
pytest = "^7.2"
pytest-cov = "^4.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = ">=4.0"
numpydoc = "^1.5"
sphinx-book-theme = "^1.0"

[tool.poetry.group.dev.dependencies]
jupyterlab = ">=2.6.1"
